@@ -73,6 +73,30 @@
     <istrue value="${test.use.je}"/>
   </condition>
 
+  <!-- Values for analysis -->
+  <property name="analysis.jvm.args"
+	    value="-server
+		   -XX:+UseParallelGC
+		   -XX:+UseFastAccessorMethods
+		   -XX:+AggressiveOpts
+		   -XX:+MaxFDLimit
+		   -XX:NewSize=512m
+		   -Xms700m
+		   -Xmx2g"/>
+  <property name="analysis.tasks"
+	    value="com.sun.sgs.analysis.task.ScheduleMapPutsTask"/>
+  <!-- Set analysis.use.data.store.server to perform analysis using the
+       networked data store -->
+  <condition
+     property="analysis.data.store.class"
+     value="com.sun.sgs.impl.service.data.store.net.DataStoreClient"
+     else="com.sun.sgs.impl.service.data.store.DataStoreImpl">
+    <istrue value="${analysis.use.data.store.server}"/>
+  </condition>
+  <property name="analysis.data.store.server.run" value="true"/>
+  <property name="analysis.data.store.server.host" value="localhost"/>
+  <property name="analysis.data.store.server.port" value="44530"/>
+
   <!-- Properties for Berkeley DB libraries -->
   <!-- The caller should set the bdb.lib.dir property to a directory
        containing the full set of JAR and native library files for
@@ -190,7 +214,10 @@
 	  description="Builds public API javadoc"/>
 
   <!-- Build the internal JavaDoc -->
-  <target name="javadoc-internal" depends="build, project-version"
+  <target name="javadoc-internal"
+	  depends="build, -test-shared.classes, -test-server.classes,
+		   -test-client.classes, analysis-classes,
+		   project-version"
           description="Builds internal (full) javadoc">
     <javadoc destdir="${build.dir}/javadoc/internal"
              packagenames="com.sun.*"
@@ -203,6 +230,7 @@
         <pathelement location="${build.dir}/test/classes/client"/>
         <pathelement location="${build.dir}/test/classes/shared"/>
         <pathelement location="${build.dir}/example/classes"/>
+	<pathelement location="${build.dir}/analysis/classes"/>
         <path refid="server.classpath"/>
         <path refid="client.classpath"/>
         <pathelement location="lib/junit-4.1.jar"/>
@@ -211,6 +239,7 @@
         <dirset dir="src" includes="*/j2se"/>
         <dirset dir="test" includes="*/j2se"/>
         <dirset dir="example" includes="*/src"/>
+	<dirset dir="analysis" includes="*/j2se"/>
       </sourcepath>
       <link href="${jdk.doc.api.url}"
 	    offline="true"
@@ -683,7 +712,8 @@
   <target name="findbugs-client" depends="build-client, -findbugs.init"
 	  description="Checks for bugs in the client">
     <findbugs home="${findbugs.dir}" jvmargs="-Xmx384m" effort="max"
-	      reportLevel="low" sort="true" output="emacs">
+	      reportLevel="low" sort="true" output="emacs"
+	      excludeFilter="etc/findbugs-exclude.xml">
       <sourcePath path="src/client/j2se"/>
       <class location="${build.dir}/classes/client"/>
       <auxClasspath>
@@ -696,7 +726,8 @@
   <target name="findbugs-server" depends="build-server, -findbugs.init"
 	  description="Checks for bugs in the server">
     <findbugs home="${findbugs.dir}" jvmargs="-Xmx384m" effort="max"
-	      reportLevel="low" sort="true" output="emacs">
+	      reportLevel="low" sort="true" output="emacs"
+	      excludeFilter="etc/findbugs-exclude.xml">
       <sourcePath path="src/server/j2se"/>
       <class location="${build.dir}/classes/server"/>
       <auxClasspath>
@@ -711,7 +742,8 @@
   <target name="findbugs-shared" depends="-build-shared, -findbugs.init"
 	  description="Checks for bugs in shared code">
     <findbugs home="${findbugs.dir}" jvmargs="-Xmx384m" effort="max"
-	      reportLevel="low" sort="true" output="emacs">
+	      reportLevel="low" sort="true" output="emacs"
+	      excludeFilter="etc/findbugs-exclude.xml">
       <sourcePath path="src/shared/j2se"/>
       <class location="${build.dir}/classes/shared"/>
       <auxClasspath>
@@ -1071,6 +1103,25 @@
     </javac>
   </target>
 
+  <!-- Builds the analysis code -->
+  <target name="analysis-classes" depends="build-server"
+          description="Builds the analysis code">
+    <mkdir dir="${build.dir}/analysis/classes"/>
+    <depend srcdir="analysis"
+            destdir="${build.dir}/analysis/classes"
+	    cache="${build.dir}/depend"
+	    closure="true"/>
+    <javac srcdir="analysis/server/j2se"
+	   destdir="${build.dir}/analysis/classes"
+	   includeAntRuntime="no"
+	   debug="on"
+	   source="${javac.source}"
+	   classpathref="server.classpath"
+	   includes="**/*.java">
+      <compilerarg value="${javac.compilerargs}"/>
+    </javac>
+  </target>
+
   <!-- Runs the example ChatApp (server) -->
   <target name="example-chat-app" depends="example-classes"
           description="Runs the example ChatApp (server)">
@@ -1107,11 +1158,62 @@
     </java>
   </target>
 
+  <!-- Runs the task timing analysis -->
+  <target name="analysis" depends="analysis-classes"
+          description="Runs the task timing analysis">
+    <mkdir dir="${build.dir}/analysis"/>
+    <delete dir="${build.dir}/analysis/logs"/>
+    <delete dir="${build.dir}/analysis/data"/>
+    <delete dir="${build.dir}/analysis/dsdb"/>
+    <mkdir dir="${build.dir}/analysis/logs"/>
+    <mkdir dir="${build.dir}/analysis/data"/>
+    <mkdir dir="${build.dir}/analysis/dsdb"/>
+    <java classname="com.sun.sgs.impl.kernel.Kernel"
+	  fork="true">
+      <jvmarg line="${analysis.jvm.args}"/>
+      <sysproperty key="com.sun.sgs.config.file"
+		   file="analysis/System.properties"/>
+      <sysproperty key="java.library.path" 
+		   file="${bdb.lib.dir}"/>
+      <sysproperty key="java.util.logging.config.file"
+		   file="${test.logging}"/>
+      <sysproperty key="com.sun.sgs.app.root"
+		   file="${build.dir}/analysis"/>
+      <sysproperty
+	 key="com.sun.sgs.impl.service.data.store.db.environment.class"
+	 value="${test.bdb.env}"/>
+      <sysproperty
+	 key="com.sun.sgs.impl.service.data.DataServiceImpl.data.store.class"
+	 value="${analysis.data.store.class}"/>
+      <sysproperty key="com.sun.sgs.impl.service.data.store.net.server.run"
+		   value="${analysis.data.store.server.run}"/>
+      <sysproperty key="com.sun.sgs.impl.service.data.store.net.server.host"
+		   value="${analysis.data.store.server.host}"/>
+      <sysproperty key="com.sun.sgs.impl.service.data.store.net.server.port"
+		   value="${analysis.data.store.server.port}"/>
+      <sysproperty key="com.sun.sgs.analysis.tasks"
+		   value="${analysis.tasks}"/>
+      <syspropertyset>
+	<propertyref prefix="test."/>
+	<propertyref prefix="com.sun.sgs."/>
+	<propertyref prefix="je."/>
+      </syspropertyset>
+      <classpath>
+        <pathelement location="${build.dir}/analysis/classes"/>
+        <path refid="server.classpath"/>
+      </classpath>
+      <arg value="analysis/AnalysisApplication.properties"/>
+    </java>
+  </target>
+
   <!-- Runs the example HackApp (server) -->
-  <target name="example-hack-app" depends="example-classes"
+  <target name="example-hack-app"
+	  depends="example-classes, -maybe-delete-hack-app-datastore"
           description="Runs the example HackApp (server)">
-    <mkdir dir="/tmp/HackApp/dsdb"/>
-    <copy todir="/tmp/HackApp/gameData">
+    <mkdir dir="${build.dir}/example"/>
+    <mkdir dir="${build.dir}/example/HackApp/data"/>
+    <mkdir dir="${build.dir}/example/HackApp/dsdb"/>
+    <copy todir="${build.dir}/example/HackApp/gameData">
       <fileset dir="example/hack/gameData"/>
     </copy>
     <java classname="com.sun.sgs.impl.kernel.Kernel"
@@ -1119,8 +1221,10 @@
       <jvmarg line="${test.jvm.args}"/>
       <jvmarg line="-server"/>
       <!--<sysproperty key="com.sun.management.jmxremote" value=""/>-->
+      <sysproperty key="com.sun.sgs.app.root"
+		   file="${build.dir}/example/HackApp"/>
       <sysproperty key="com.sun.sgs.config.file"
-           file="example/hack/System.properties"/>
+		   file="example/hack/System.properties"/>
       <sysproperty key="java.library.path" file="${bdb.lib.dir}"/>
       <sysproperty
 	 key="com.sun.sgs.impl.service.data.store.db.environment.class"
@@ -1133,6 +1237,13 @@
       </classpath>
       <arg value="example/hack/HackApp.properties"/>
     </java>
+  </target>
+
+  <!-- Deletes the Hack example data store files unless the
+       hack.server.retain.datastore property is set. -->
+  <target name="-maybe-delete-hack-app-datastore"
+	  unless="hack.server.retain.datastore">
+    <delete dir="${build.dir}/example/HackApp"/>
   </target>
 
   <!-- Runs the example HackClient (GUI client) -->
@@ -1149,6 +1260,26 @@
         <pathelement location="${build.dir}/example/classes"/>
         <path refid="client.classpath"/>
       </classpath>
+    </java>
+  </target>
+
+  <!-- Runs the Hack example AIClient -->
+  <target name="example-hack-ai-client" depends="example-classes"
+          description="Runs the example HackClient (AI client)">
+    <property name="hack.server.host" value="localhost"/>
+    <property name="hack.client.count" value="10"/>
+    <java classname="com.sun.sgs.example.hack.client.ai.AIClient"
+          fork="true">
+      <jvmarg line="${test.jvm.args}"/>
+      <sysproperty key="host" value="${hack.server.host}"/>
+      <sysproperty key="port" value="4458"/>
+      <sysproperty key="java.util.logging.config.file"
+		   file="${test.logging}"/>
+      <classpath>
+        <pathelement location="${build.dir}/example/classes"/>
+        <path refid="client.classpath"/>
+      </classpath>
+      <arg value="${hack.client.count}"/>
     </java>
   </target>
 
@@ -1212,6 +1343,8 @@
       com.sun.sgs.impl.service.data.store.net.server.run = true
       com.sun.sgs.impl.service.data.DataServiceImpl.data.store.class = \
         com.sun.sgs.impl.service.data.store.net.DataStoreClient
+      com.sun.sgs.impl.service.data.store.db.environment.class = \
+        ${test.bdb.env}
     </echo>
     <echo file="${test.server.dir}/logging.config">
       .level = ${test.server.level}
